--- a/content/posts/2024-06.md
+++ b/content/posts/2024-06.md
@@ -20,7 +20,7 @@ slug:
 
 ---
 
-自上一篇讲Fanfic的博客之后，又颇为上头为我CP写了三篇同人，鉴于有点写累了这段时间应该不会再写新的，所以一并拿过来讲一讲。我好像是友邻里面唯一一个会在生活博客里面大谈自己CP小说写作的人，但我不管，这毕竟是我生活的重要部分，我都在SNS上压抑住自己聊的欲望了，总得让我在博客里好好说道说道吧！我真的做不成那种写完故事这件事就算结束了的写作者，很自恋唠叨。
+自上一篇[讲Fanfic的博客](/posts/aboutfic/)之后，又颇为上头为我CP写了三篇同人，鉴于有点写累了这段时间应该不会再写新的，所以一并拿过来讲一讲。我好像是友邻里面唯一一个会在生活博客里面大谈自己CP小说写作的人，但我不管，这毕竟是我生活的重要部分，我都在SNS上压抑住自己聊的欲望了，总得让我在博客里好好说道说道吧！我真的做不成那种写完故事这件事就算结束了的写作者，很自恋唠叨。
 
 我在想故事的几件事：一是，我写得更好了吗？它们是更好的故事吗。二是，如今我不再相信天赋写作那一回事。这是中学老师的谎言，现在长大，我不相信写作还存在任何天才球。我觉得好的写作一定是准确的写作，想要写出准确的故事是可以用练习做到的。只是每个人想要写的故事不一样，需要的练习也不同。
 
