--- a/content/posts/2024-08-25永别书.md
+++ b/content/posts/2024-08-25永别书.md
@@ -1,6 +1,6 @@
 ---
 title: 读段永别书：第二次爆炸
-description: ""
+description: "比真实更绝对的，是对真实的在乎。"
 date: 2024-08-25
 draft: false
 tags: 
@@ -19,12 +19,12 @@ Comments: true
 
 《永别书：在我在与不在的时代》第十六章：
 
-<audio controls height="100" width="100">
-  <source src="/audio/永别书01.mp3">
-</audio>
+{{< audio src="/audio/永别书01.mp3" preload="auto" >}}
+
+![](/audio/01.png)
 
 《永别书》第十七章：
 
-<audio controls height="100" width="100">
-  <source src="/audio/永别书02.mp3">
-</audio>
+{{< audio src="/audio/永别书02.mp3" preload="auto" >}}
+
+![](/audio/02.png)
