--- a/content/posts/11月.md
+++ b/content/posts/11月.md
@@ -64,9 +64,9 @@ slug: disconnected
 
 1. **便宜。** 我买的尺寸是5层，长宽高为100X40X180CM，实付整100元，足以收纳我的全屋鸡零狗碎，搬家带不走应该也不会觉得心痛。如果按照小红书网友那种攒购物红包每天买一点部件的方式应该可以更便宜，但我只是直接买了配好零件比例的。横向对比其他置物收纳架，这应该是相对便宜的置物架了。
 
-2. 层高可以灵活调整。我在买之前就确定最顺手的那一层需要有50-60厘米高，可以用来放咖啡机和水壶，是日常可以顺手做咖啡的地方，其他层需要放的东西位置宽窄倒无所谓。因此固定层高的收纳架就不太适合我。
+2. **层高可以灵活调整。** 我在买之前就确定最顺手的那一层需要有50-60厘米高，可以用来放咖啡机和水壶，是日常可以顺手做咖啡的地方，其他层需要放的东西位置宽窄倒无所谓。因此固定层高的收纳架就不太适合我。
 
-3. 我还以为安装很轻松。五层置物架大概需要拧120对螺丝吧，我买之前只是看了看视频，没有想过工作量还挺大的，拧了差不多三个小时才搞定。安装之前很担心稳固性，后来发现其实还好，角钢架构很稳固，只是担心板材使用久了会弯曲。不过正因为是自己安装的，所以对搬家后可以直接拆卸带走这件事蛮有信心，让我们拭目以待吧。
+3. **我还以为安装很轻松。** 我的五层置物架安装下来大概需要拧120对螺丝，我买之前只是看了看视频，没有想过工作量还挺大的，拧了差不多三个小时才搞定。安装之前很担心稳固性，后来发现其实还好，角钢架构很稳固，只是担心板材使用久了会弯曲。不过正因为是自己安装的，所以对搬家后可以直接拆卸带走这件事蛮有信心，让我们拭目以待吧。
 
 上述谈到的那一层做咖啡的地方，目前是我家最幸福的角落。也不是什么重要的分享，就先说到这里。
 
