--- a/content/posts/卤煮.md
+++ b/content/posts/卤煮.md
@@ -12,11 +12,13 @@ categories:
 
 ## 卤煮
 
+<img src="/卤煮.jpeg" alt="" class="float-img35">
+
 周末躺在床上，我决定做卤煮。经过一番检索，市面上大多的教程都要求放八角等香料，而要备齐这些每样需要2克、一共需要8样的香料对我来说太复杂，我决定用All in One的李锦记卤水进行制作。在各式使用现成卤水的菜谱中，不知道为什么，很多教程加完卤水还是要求继续放香料：那我使用现成卤水的原因就是不想买这么多香料嘛！所以我决定无视。
 
 实际上卤煮就是烫菜的一种，只是煮制的时间更久，有上色的过程罢了。
 
-我的目标实际是卤牛肉。但因为是第一次做，我决定先搞点便宜的试试水，于是放了一斤鸭翅，又放了一斤琵琶腿。
+我的目标实际是卤牛肉。但因为是第一次做，我决定先搞点便宜的试试水，于是放了一斤鸭翅，又放了一斤琵琶腿。过程如下：
 
 1. 鸭翅和鸡腿先冷水下锅，有葱加葱，有姜加姜，有料酒加料酒。我只加了葱和料酒去腥。煮到沸腾后五分钟，把水倒掉。放水把浮沫之类的冲洗干净。
 
@@ -55,8 +57,3 @@ categories:
 5. 酱料可以用薄盐生抽，蒜蓉，香油混合一下就好。
 
 整个过程最难的地方在于要保持高警惕性、高防烫意识、高敏捷度，所以制作之前要像一个肠粉特工一样先在脑中先预演至少五次，实操过程里才不会慌慌张张。你问我为什么要这么快，这么紧张，这么有压迫感？！因为肠粉凉得也很快，慢吞吞地得到一份凉了的肠粉，这不会是一个自制肠粉的受众会想要的结果。
-
-
-由于传图麻烦，唯一传到SNS的是我制作的卤煮，所以就简单放一下好了：
-
-![](/卤煮.jpeg)
