--- a/content/posts/11月.md
+++ b/content/posts/11月.md
@@ -78,7 +78,7 @@ slug: disconnected
 
 我垂涎于微信阅读网页版已久，因为想要有在PC端可以同步阅读进度的阅读器，所以才想要换Kindle。但经过一番追索，发现微信阅读的已经开始限制免费导入次数了，直接打消了我换安卓阅读器的热情。
 
-从源头进行思考以后，我想要的东西其实很简单，我只是想要一个PC端阅读器， 可以同步一下电纸书进度而已。很久以前我就下过Kindle的PC软件，也用过它的网页端，都是不支持个人文档同步的……直到最近我又下载了一次才发现——
+从源头进行思考以后，我想要的东西其实很简单，我只是想要一个PC端阅读器，可以同步一下电纸书进度而已。很久以前我就下过Kindle的PC软件，也用过它的网页端，都是不支持个人文档同步的……直到最近我又下载了一次才发现——
 
 **你的PC端什么时候更新成这样了！**
 
@@ -96,7 +96,7 @@ slug: disconnected
 
 我的日程本喜欢按照月/周对时间进行划分，需要对票根之类的小纸片进行垃圾收纳，需要随手写一些小说的剧情片段和时间线方便查阅。我对自己没有计划，日程靠手机日历提醒，我没有Todo，不做decoration，也没有记录压力。今年写了这本定页Weeks之后我才发现，我需要的甚至不是月周划分，我只是需要每天有很小一格进行当日的填写（当然也不会每天都写），然后右侧有自由页可以狂涂乱抹，然后本子小到我可以带出门用。
 
-经过一通翻找，发现我这种完全无空窗心理压力的需求，和对版面的需要，还觉得每年都要买新本子很麻烦的人，要不就以干脆买：**五年日记吧！** {{< emoji name="meow_smile">}}
+经过一通翻找，发现我这种完全无空窗心理压力的需求，和对版面的需要，还觉得每年都要买新本子很麻烦的人，要不就干脆买：**五年日记吧！** {{< emoji name="meow_smile">}}
 
 总之最后我是被外貌征服，买了Hobo的A6小五年。也因为市面上好像也只有Hobo和Crena（断货）才有左边日记页，右边自由页的多年日记符合我的排版需求。因为还未到手，目前还在一个非常期待的阶段。所以下一次更新关于这个本子的事情，应该是明年的年中或年底。
 
